# tinyproot

./: CMakeLists.txt  README.md
src/: arch.h  tinyproot.c  tinyproot.h
src/execve/: elf.c  elf.h  enter.c  execve.h  exit.c
src/loader/: assembly-arm64.h  loader.c  script.h
src/path/: path.c  path.h  proc.c  proc.h
src/ptrace/: ptrace.c  ptrace.h  wait.c  wait.h
src/syscall/: chain.c  chain.h  enter.c  exit.c  rlimit.c  seccomp.c  seccomp.h  socket.c  socket.h  syscall.c  syscall.h  sysnum.c  sysnum.h
src/tracee/: abi.h  event.c  mem.c  mem.h  reg.c  reg.h  seccomp.c  seccomp.h  tracee.c  tracee.h
